--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,7 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
+    
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -68,6 +69,14 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags:  type=semver,pattern={{version}}
+      
+          # type=schedule
+          # type=ref,event=branch
+          # type=ref,event=pr
+          # type=semver,pattern={{major}}.{{minor}}
+          # type=semver,pattern={{major}}
+          # type=sha 
       # List all files and PWD
       - name: check prenent working directory
         run: pwd 
