--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,7 @@ on:
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ "main" ]
     
@@ -69,14 +69,10 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags:  type=semver,pattern={{version}}
+          tags: |
+            type=refs/tags/${{ github.ref }}
       
-          # type=schedule
-          # type=ref,event=branch
-          # type=ref,event=pr
-          # type=semver,pattern={{major}}.{{minor}}
-          # type=semver,pattern={{major}}
-          # type=sha 
+
       # List all files and PWD
       - name: check prenent working directory
         run: pwd 
@@ -90,7 +86,7 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push:                          # ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
