--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,7 +74,7 @@ jobs:
           tags: |
               type=semver,pattern={{version}}
               type=semver,pattern={{major}}.{{minor}}
-              type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
+        # type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
       
 
       # List all files and PWD
