--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,8 +11,8 @@ on:
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
-    tags: 
-       - 'v[0-9]+.[0-9]+.[0-9]+'
+    # tags: 
+    #    - 'v[0-9]+.[0-9]+.[0-9]+'
   pull_request:
     branches: [ "main" ]
     
@@ -22,6 +22,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  IMAGE_TAG: 2.3.3-${{github.run_number}}
 
 
 jobs:
@@ -71,10 +72,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           #images: ${{ env.IMAGE_NAME }}
-          tags: |
-              type=semver,pattern={{version}}
-              type=semver,pattern={{major}}.{{minor}}
-        # type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
+        #   tags: |
+        #       type=semver,pattern={{version}}
+        #       type=semver,pattern={{major}}.{{minor}}
+        # # type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
       
 
       # List all files and PWD
@@ -90,9 +91,10 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
-          #push:  ${{ github.event_name != 'pull_request' }}
-          push: ${{ github.event.base_ref =='refs/heads/main' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
-          tags: ${{ steps.meta.outputs.tags }}
+          push:  ${{ github.event_name != 'pull_request' }}
+          #push: ${{ github.event.base_ref =='refs/heads/main' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
+          #tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
