--- a/mirror-maker/Dockerfile
+++ b/mirror-maker/Dockerfile
@@ -14,6 +14,8 @@ RUN apt-get update  && apt-get install -y netcat wget && \
 ENV PATH=$PATH:/opt/kafka/bin
 
 COPY connect-mirror-maker.properties /opt/kafka/config 
-COPY runMirrorMaker.sh /opt/kafka/bin
+# COPY runMirrorMaker.sh /opt/kafka/bin
 
-ENTRYPOINT [ "/opt/kafka/bin/runMirrorMaker.sh" ]
+
+CMD [ "/bin/connect-mirror-maker.sh",  "/config/connect-mirror-maker.properties" ]
+# ENTRYPOINT [ "/opt/kafka/bin/runMirrorMaker.sh" ]
