--- a/.github/workflows/kafka-mirrormaker.yml
+++ b/.github/workflows/kafka-mirrormaker.yml
@@ -15,7 +15,9 @@ on:
     #    - 'v[0-9]+.[0-9]+.[0-9]+'
   pull_request:
     branches: [ "kafka-mirror" ]
-    
+defaults:
+      run:
+       working-directory: ./mirror-maker
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -39,6 +41,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+       
 
         # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
