--- a/.github/workflows/kafka-mirrormaker.yml
+++ b/.github/workflows/kafka-mirrormaker.yml
@@ -94,9 +94,8 @@ jobs:
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-        working-directory: ./mirror-maker
         with:
-          context: .
+          context: ./mirro-maker/Dockerfile .
           push:  ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-mirrormaker:${{env.IMAGE_TAG}}
           labels: ${{ steps.meta.outputs.labels }}
