--- a/.github/workflows/kafka-mirrormaker.yml
+++ b/.github/workflows/kafka-mirrormaker.yml
@@ -89,18 +89,21 @@ jobs:
       - name: check all repo ddata before execution docker build   
         run:  ls      
       
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-        with:
-          context: mirror-maker/Dockerfile .
-          push:  ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-mirrormaker:${{env.IMAGE_TAG}}
-          labels: ${{ steps.meta.outputs.labels }}
-          # cache-from: type=gha
-          # cache-to: type=gha,mode=max
+        run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-mirrormaker:${{env.IMAGE_TAG}} -f mirror-maker/Dockerfile .
+
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+      # - name: Build and push Docker image
+      #   id: build-and-push
+      #   uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+      #   with:
+      #     context: ./mirror-maker/Dockerfile .
+      #     push:  ${{ github.event_name != 'pull_request' }}
+      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-mirrormaker:${{env.IMAGE_TAG}}
+      #     labels: ${{ steps.meta.outputs.labels }}
+
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
