--- a/mirror-maker/old_connect-mirror-maker.properties
+++ b/mirror-maker/old_connect-mirror-maker.properties
@@ -18,71 +18,44 @@
 # Run with ./bin/connect-mirror-maker.sh connect-mirror-maker.properties 
 
 # specify any number of cluster aliases
-
 clusters = A, B
 
-
-# connection information for each cluster 
-# This is a comma separatedhost:port pairs for each cluster 
-# for e.g. "A_host1:9092, A_host2:9092,A_host3:9092"
-
+# connection information for each cluster
+# This is a comma separated host:port pairs for each cluster
+# for e.g. "A_host1:9092, A_host2:9092, A_host3:9092"
+# A.bootstrap.servers = 20.191.61.***:9094,20.***.63.130:9094,20.***.63.117:9094
+# B.bootstrap.servers = 20.91.176.***:9094,20.240.158.***:9094,20.***.16.139:9094
 A.bootstrap.servers = ha-kafka-demo.default:9092
-
 B.bootstrap.servers = ha-kafka-demo.kafka:9092
 
 # enable and configure individual replication flows
-
 A->B.enabled = true
 
 # regex which defines which topics gets replicated. For eg "foo-.*"
-
 A->B.topics = .*
 
 B->A.enabled = false
-
 B->A.topics = 
 
-
 # Setting replication factor of newly created remote topics
-replication.factor=3 
+replication.factor=3
 
-
-############################# Internal Topic Settings ############
-
-# The replication factor for mm2 internal topics "heartbeats","B.checkpoints.internal" and
-
-# "mm2-offset-syncs.B.internal" 
-# For anything other than development testing, a value greater than 1 is recommended to ensure availability such
-as 3. 
-
-#checkpoints.topic.replication.factor=
-#heartbeats.topic.replication.factor=
+############################# Internal Topic Settings  #############################
+# The replication factor for mm2 internal topics "heartbeats", "B.checkpoints.internal" and
+# "mm2-offset-syncs.B.internal"
+# For anything other than development testing, a value greater than 1 is recommended to ensure availability such as 3.
+checkpoints.topic.replication.factor=3
+heartbeats.topic.replication.factor=3
 offset-syncs.topic.replication.factor=3
 
-
 # The replication factor for connect internal topics "mm2-configs.B.internal", "mm2-offsets.B.internal" and
-#"mm2-status.B.internal"
-
+# "mm2-status.B.internal"
 # For anything other than development testing, a value greater than 1 is recommended to ensure availability such as 3.
-
 offset.storage.replication.factor=3
+status.storage.replication.factor=3
+config.storage.replication.factor=3
 
-#status.storage.replication.factor= #config.storage.replication.factor=
-
-# customize as needed # replication.policy.separator = _ #
-sync.topic.acls.enabled = false # emit.heartbeats.interval.seconds = 5
-
-replication.policy.separator=
-
-source.cluster.alias=
-
-target.cluster.alias=
-
-sync.topic.configs.interval.seconds=5
-
-refresh.topics.enabled=true
-
-refresh.topics.interval.seconds=5
-
-#replication.policy.class =
-org.apache.kafka.connect.mirror.MigrationReplicationPolicy
+# customize as needed
+# replication.policy.separator = _
+# sync.topic.acls.enabled = false
+# emit.heartbeats.interval.seconds = 5
